# thread-pool-stack-size

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  find_stack_size.sh  main_app.py
app/: CMakeLists.txt  display.cpp  display.hpp  helloworld.cpp  lcddisplay.cpp  lcddisplay.hpp  sample.cpp  sample.hpp
data/: settings.json
src/: loader.py  parser.py
src/settings/: config.py  constants.py  settings.py
